force-app/main/default/objects/EConveyancing_Workspace__c/EConveyancing_Workspace__c.object-meta.xml
<CustomObject>
    <label>EConveyancing Workspace</label>
    <nameField>
        <displayFormat>EW-{00000000}</displayFormat>
        <label>EConveyancing Workspace Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EConveyancing Workspaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>