force-app/main/default/objects/EConveyancing_Workspace__c/fields/Created_Date_Time_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time_Workspace__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>System Date &amp; Time of when workspace creation was triggered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Created Date Time(Workspace)</label>
    <type>DateTime</type>
</CustomField>