force-app/main/default/objects/EConveyancing_Workspace__c/fields/EConveyancing_ID__c.field-meta.xml
<CustomField>
    <fullName>EConveyancing_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Unique identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>EConveyancing_ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>