force-app/main/default/objects/EConveyancing_Workspace__c/fields/EConveyancing_Workspace_ID__c.field-meta.xml
<CustomField>
    <fullName>EConveyancing_Workspace_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>External system (e.g. PEXA) Workspace identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EConveyancing Workspace ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>