force-app/main/default/objects/EConveyancing_Workspace__c/fields/Unread_Conversations_Count__c.field-meta.xml
<CustomField>
    <fullName>Unread_Conversations_Count__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Conversations on a workspace between parties</description>
    <label>Unread Conversations Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>