force-app/main/default/objects/EConveyancing_Workspace__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>The version of the EConveyancing Workspace details provided from GCP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>